# top100

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  task.txt  test_task.md
.github/workflows/: mypy-check.yml  mypy_lint_form_check.yml
src/backend/: logs.py  main.py
src/backend/DB/: db.py  settings.py
src/backend/api/: exceptions.py  git_routes.py  responses.py
src/backend/app/: pydantic_tabels.py  repo.py
src/backend/app/gateways/: commit_qateway.py  repo_qateway.py
src/backend/app/interactions/: commit_interactor.py  custom_exceptions.py  repo_interactor.py
src/cloud_function/: cloud_config.py  cloud_function_logic.py  fetcher.py  get_db.py  main.py  parser.py  requirements.txt
src/cloud_function/terraform/: main.tf  variables.tf
tests/: conftest.py  fake_db.py
